// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssignmentsListComponent matches snapshot 1`] = `
<ContextProvider
  value={
    Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Object {
        "addNestedSub": [Function],
        "getListeners": [Function],
        "handleChangeWrapper": [Function],
        "isSubscribed": [Function],
        "notifyNestedSubs": [Function],
        "trySubscribe": [Function],
        "tryUnsubscribe": [Function],
      },
    }
  }
>
  <AssignmentList
    assignments={
      Array [
        Object {
          "end_date": "10-10-2018",
          "estimated_end_date": "10-10-2018",
          "position": Object {
            "bureau": "(NEA) BUREAU NEAR EASTERN AFFAIRS",
            "position_number": "58348065",
            "post": Object {
              "location": Object {
                "city": "Washington",
                "code": "500",
                "country": "United States",
                "id": 4,
                "state": "DC",
              },
            },
            "skill": "CONSTRUCTION ENGINEERING (6218)",
            "title": "PROJECT DIRECTOR",
          },
          "start_date": "10-10-2016",
        },
      ]
    }
    id={null}
    showMaintainAssignmentLink={false}
  />
</ContextProvider>
`;

exports[`AssignmentsListComponent matches snapshot when there are no bids 1`] = `
<ContextProvider
  value={
    Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Object {
        "addNestedSub": [Function],
        "getListeners": [Function],
        "handleChangeWrapper": [Function],
        "isSubscribed": [Function],
        "notifyNestedSubs": [Function],
        "trySubscribe": [Function],
        "tryUnsubscribe": [Function],
      },
    }
  }
>
  <AssignmentList
    assignments={Array []}
    id={null}
    showMaintainAssignmentLink={false}
  />
</ContextProvider>
`;
